style: disable overflow for body to prevent scrollbars in main container

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -104,6 +104,7 @@ body {
   height: 100vh;
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
+  overflow: hidden;
 }
 
 markdown p {
